stops overflow from large number #4

--- a/example/public/styles.css
+++ b/example/public/styles.css
@@ -18,12 +18,12 @@ body {
 
 .count {
   display: inline-block;
-  width: 2rem;
+  width: auto;
   height: 2rem;
   text-align: center;
   line-height: 1;
   font-size: 1.5rem;
   font-weight: 600;
-  padding: 0;
+  padding: 0.5rem;
   margin: 0;
 }
